26Dec01=======================================================================
1. make some detail changes to help texts
2. Added 'all' to the Band's region table to allow 'acc/spot on all/cw'
23Dec01=======================================================================
1. allow sh/dx on 1000/4000 (or 1000-4000).
2. merge sh/dx and sh/dxcc commands (Alias sh/dxcc to sh/dx dxcc). You can
now do things like 'sh/dxcc oq2 by w dxcc'. 
20Dec01=======================================================================
1. Fix 'not' in filtering
2. alter default max spots to 100 and the no of WWV to 5
17Dec01=======================================================================
1. added new satellite stuff from Steve K9AN. Fixed upper/lower problem
in convkeps.pl.
2. enhanced load/keps to accept a message no. This will create a new keps
file from a msg (hopefully containing 2 Line Nasa keps) and then load - all
in one step. Added load/keps to the help files
3. Updated spanish Messages
4. Improve wcy command from Stephan DK8LV's input
5. Added set/prompt (and unset/prompt) command so that Stephan can fool some
external programs into thinking it is talking to clx.
15Dec01=======================================================================
1. added superfluous spaces back into PC73 for the benefit of clx
14Dec01=======================================================================
1. make Spanish in set/lang & Messages 'es' instead of 'sp'
2. added prototype WCY and WWV commands (for qualified users only)
3. Added Commands_es.hlp contributed by Angel EA7WA
12Dec01=======================================================================
1. added Commands_de.hlp contributed (in record time) by Stephan DK8LV.
2. fixed help command so it uses it!
11Dec01=======================================================================
1. make PC17 generation more unconditional
08Dec01=======================================================================
1. added unset/hops command