@@ -15,6 +15,8 @@ if ($self->is_user && -e "$main::data/logout") {
 	sleep(1);
 }
 
+$self->send_now('Z', "");
+
 $self->disconnect;
 
 return (1);
